# YKPYT25H2_PRJ1

./: .gitignore  ProjectStep1.md  ProjectStep2.md  README.md  compare_and_validate.ipynb  pyproject.toml  value_meridian_eda.ipynb
booli-bruno/: areaSuggestionSearch.bru  bruno.json  searchForSale.bru  searchSold.bru
data/: example_infer.yaml  market_index.csv  partille_model.compare.csv  partille_model.compare.json  partille_model.feature_importance.csv  partille_model.joblib  partille_model.joblib.meta.json  partille_model.meta.json  partille_model_log.joblib  partille_model_log.meta.json  partille_raw.csv  partille_sold_eda.csv  reference_points.yaml
src/value_meridian/: features.py  fetch_data_to_local_cache.py  inference.py  schema.py  train.py
